# cognitive-load-detector

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  datasheet.md  launch_repo.sh  model_card.md  pyproject.toml  requirements-app.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
demo/: streamlit_app.py
docs/: architecture.md  roadmap.md
docs/adr/: 0001-initial-architecture.md
examples/: quickstart.py
notebooks/: quickstart.ipynb
scripts/: generate_release_notes.py
src/: app.py
src/cognitive_load_detector/: __init__.py  api.py  config.py  dp_sgd.py  network.py  peer.py
src/cognitive_load_detector/proofs/: __init__.py
src/flzk/: __init__.py  dataset.py  network.py  peer.py  privacy.py  simulation.py
src/flzk/proofs/: base.py  mock.py  snarkjs.py
tests/: conftest.py  test_api.py  test_dp_sgd.py  test_health.py  test_network.py  test_package.py  test_proofs.py  test_simulate.py  test_simulation.py
