[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flzk"
version = "0.1.0"
description = "Verifiable browser-based P2P federated learning with DP-SGD and optional zk proofs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.118.0",
  "uvicorn==0.37.0",
  "pydantic==2.11.9",
  "numpy==2.2.6",
  "scikit-learn==1.7.2",
  "streamlit==1.50.0",
  "httpx==0.28.1"
]

[project.optional-dependencies]
dev = [
  "bandit==1.7.9",
  "build==1.3.0",
  "mypy==1.18.2",
  "pip-audit==2.7.3",
  "pre-commit==4.0.1",
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
  "ruff==0.13.2",
]

[project.urls]
Homepage = "https://github.com/priyatham28/cognitive-load-detector"

[tool.setuptools.packages.find]
where = ["src"]
